Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1294

CHECK failure on TransactionTracker memtracker with unreleased consumption

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.6.0
    • 1.4.0
    • tablet
    • None

    Description

      DeleteTableTest.TestDeleteTableWithConcurrentWrites: mem_tracker.cc:187] Check failed: consumption() == 0 Memory tracker txn_tracker->tablet-9446603547684183ba2053888b40696f->server->root has unreleased consumption 2400
          @     0x7effe68a03b8  kudu::MemTracker::~MemTracker() at ??:0
          @     0x7effe68a3acc  std::_Sp_counted_ptr<>::_M_dispose() at ??:0
          @     0x7effe9f74911  std::_Sp_counted_base<>::_M_release() at ??:0
          @     0x7effe9f748c7  std::__shared_count<>::~__shared_count() at ??:0
          @     0x7effe9fafdee  std::__shared_ptr<>::~__shared_ptr() at ??:0
          @     0x7effe93b8531  kudu::tablet::TransactionTracker::~TransactionTracker() at ??:0
          @     0x7effe93a614b  kudu::tablet::TabletPeer::~TabletPeer() at ??:0
          @     0x7effe93a62ea  kudu::tablet::TabletPeer::~TabletPeer() at ??:0
          @     0x7effe9f89e48  kudu::RefCountedThreadSafe<>::DeleteInternal() at ??:0
          @     0x7effe9f89e0a  kudu::DefaultRefCountedThreadSafeTraits<>::Destruct() at ??:0
          @     0x7effe9f89dda  kudu::RefCountedThreadSafe<>::Release() at ??:0
          @     0x7effe9f8743b  scoped_refptr<>::~scoped_refptr() at ??:0
          @     0x7effe9fd4f42  kudu::tserver::TSTabletManager::DeleteTablet() at ??:0
      

      Attachments

        Issue Links

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            aserbin Alexey Serbin
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment